syntax = "proto3";
import "google/protobuf/empty.proto";
import "Protos/Homework.proto";
import "Protos/User.proto";

option csharp_namespace = "gRPCClient";
option java_multiple_files = true;
option java_package = "sep3.project.protobuf";
option java_outer_classname = "LessonProto";

message LessonData{
  optional string id = 1;
  int64 date = 2;
  string topic = 3;
  string description = 4;
  optional Homework homework = 5;
  repeated UserAttendee attendees = 6;
}

message LessonOverview{
  string id = 1;
  int64 date = 2;
  string topic = 3;
  string description = 4;
}
message RequestAddLesson{
  string classId = 1;
  LessonData lesson = 2;
}
message ResponseAddLesson{
  LessonData lesson = 1;
}
message RequestMarkAttendance{
  string lessonId = 1;
  repeated string usernames = 2;
}
message ResponseMarkAttendance{
  int32 amountOfParticipants = 1;
}
message RequestGetAttendance{
  string lessonId = 1;
}
message ResponseGetAttendance{
  repeated UserAttendee attendees = 1;
}
message RequestGetLessonsByClassId{
  string classId = 1;
}
message ResponseGetLessonsByClassId{
  repeated LessonData lessons = 1;
}
message RequestGetLessonById{
  string lessonId = 1;
}
message ResponseGetLessonById{
  LessonData lesson = 1;
}
message RequestGetLessonExtendedByHomeworkHandInFeedback{
  string lessonId = 1;
  string username = 2;
}

message RequestDeleteLesson{
  string lessonId = 1;
}
message ResponseDeleteLesson{
  LessonData lesson = 1;
}

//message ResponseGetLessonExtendedByHomeworkHandInFeedback{
//  Lesson lesson = 1;
//  optional HomeworkHelper homework = 2;
//  optional FeedbackHelper feedback = 3;
//}
service LessonService{
  rpc addLesson(RequestAddLesson) returns (ResponseAddLesson);
  rpc markAttendance(RequestMarkAttendance) returns (ResponseMarkAttendance);
  rpc getAttendance(RequestGetAttendance) returns (ResponseGetAttendance);
  rpc getLessonById(RequestGetLessonById) returns (ResponseGetLessonById);
  rpc getLessonsByClassId(RequestGetLessonsByClassId) returns (ResponseGetLessonsByClassId);
 
  rpc deleteLesson(RequestDeleteLesson) returns (ResponseDeleteLesson);
  //  rpc GetLessonExtendedByHomeworkHandInFeedback(RequestGetLessonExtendedByHomeworkHandInFeedback) returns (ResponseGetLessonExtendedByHomeworkHandInFeedback);
}